[project]
name = "nonebot_plugin_picsetu"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "zhongwen-4", email = "2401128923@qq.com"},
]
dependencies = [
    "nonebot2>=2.3.3",
    "nonebot-adapter-onebot>=2.4.5",
    "httpx>=0.27.2",
]
requires-python = ">= 3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
